--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
 	<title>Document</title>
 	<style>
 		:root{
+			--warna_background: #ffff00;
 			--lebar_print : 1011px;
 			--tinggi_print : 638px;
 		}
 		body{font-size: 14pt;}
 		.wrapper{width: 90%;margin: 15px auto;margin-bottom: 15px;}
 		.wrap-id-card{
+			background: var(--warna_background);
 			width: var(--lebar_print);
 			height: var(--tinggi_print);
 			border: 1px solid #000;
